added volume info

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "periodDays": 28,
-  "cacertPath":"C:\\Users\\soanni\\.docker\\ca.pem",
-  "certPath":  "C:\\Users\\soanni\\.docker\\cert.pem",
-  "keyPath":   "C:\\Users\\soanni\\.docker\\key.pem",
-  "logPath": "C:\\Users\\soanni\\PROJECTS\\my-elasticsearch-app",
-  "elasticUser": "***",
+  "cacertPath":"/home/soanni/.docker/ca.pem",
+  "certPath":  "/home/soanni/.docker/cert.pem",
+  "keyPath":   "/home/soanni/.docker/key.pem",
+  "logPath": "/home/soanni/PROJECTS/my-elasticsearch-app",
+  "elasticUser": "elastic",
   "elasticPass": "***",
   "elasticServer" : "10.69.12.196",
   "elasticPort" : "9200",
